--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
         "tailwindcss": "^1.3.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "dotenv": "^8.2.0",
+        "vue-cookies": "^1.7.4"
     }
 }
